--- a/index.html
+++ b/index.html
@@ -65,5 +65,8 @@
                 </li>
             </ol>
         </footer>
+        <script src="lab67.js">
+            
+        </script>
     </body>
 </html>
